fix: cart overflowing on small screens

--- a/eCommerce/client/src/components/Cart/Cart.scss
+++ b/eCommerce/client/src/components/Cart/Cart.scss
@@ -6,10 +6,8 @@
   background-color: white;
   padding: 20px;
   outline: 1px solid #000000;
-  min-height: fit-content;
   width: 400px;
   border-radius: 8px;
-  
 
   @media (max-width: 768px) {
     width: 80dvw;
@@ -22,21 +20,21 @@
     font-size: 24px;
     position: relative;
 
-    .cancelIcon{
+    .cancelIcon {
       position: absolute;
-      top: -10px;
-      right: -10px;
+      top: 0px;
+      right: 0px;
       cursor: pointer;
       color: black;
       font-size: 40px;
       &:hover {
         color: red;
-        scale: 1.1;
+        scale: 1.05;
       }
     }
   }
   .mapWrap {
-    max-height: 500px;
+    max-height: calc(60dvh - 150px);
 
     @media (max-width: 768px) {
       max-height: 50dvh;
